--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,36 +36,109 @@ header nav {
   color: var(--tertiary);
   margin: 5px 0 20px;
   font-size: 2rem;
+  
 }
 
 header div span {
   font-size: 2.0rem;
 
 }
+
 p,
 li {
   font-size: 1.6rem;
 }
 
-form {
+.score-time {
   display: flex;
-  align-items: flex-end;
-  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 5px 35px;
 }
 
-form input {
-  outline: none;
-  border: none;
-  padding: 12px;
+.score {
+  padding: 5px;
+  color: var(--tertiary);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.time {
+  padding: 5px;
+  color: var(--tertiary);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+/* test */
+.test {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+}
+/* questions answers options */
+.answer-list {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 500px;
+}
+.options-container {
+  margin: 15px 10px; 
+  align-items: center;
+  list-style-type: none;
+}
+.option-text {
+  padding: 25px;
+  background: rgb(162, 255, 162);
+  border-radius: 14px;
+  font-size: 1.2rem;
+}
+.hidden {
+  display: none;
+}
+.correct {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 20px;
+  padding: 20px;
   width: 100%;
-  font-size: 2.2rem;
-  border: 2px solid var(--grey);
-  border-radius: 12px;
+  height: 40px;
 }
+/* Question Area */
+.question {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: var(--tertiary);
+  font-size: 40px;
+  text-align: center;
+  width: 650px;
+}
+.question {
+  cursor: pointer;
+}
+/* Start button area */
+.startbtn {
+  font-size: 2rem;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  padding: 25 px;
+  text-decoration: none;
+  width: 10rem;
+  background: var(--primary);
+  border-radius: 6px;  
+}
+.start {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.start span {
+  justify-content: space-around;
+  margin-bottom: 30px;
 
-form .form-group {
-  margin: 10px 6px 10px 0;
-  flex: 1;
+}
+.start {
+  cursor: pointer;
 }
 
 footer {
@@ -112,65 +185,14 @@ footer h2 {
   width: 95%;
 }
 
-.task-list-wrapper {
-  flex: 1;
-  margin: 0 20px 20px;
-}
-
-.list-title {
-  color: var(--secondary);
-  font-size: 2.6rem;
-}
-
-.task-list {
-  list-style: none;
-  padding: 15px;
-  height: calc(100% - 50px);
-  background: rgb(196, 196, 196);
-  border-radius: 12px;
-  border: 2px solid var(--grey);
-}
-
-.task-item {
-  color: var(--grey);
-  padding: 15px 15px;
-  border: 2px solid var(--grey);
-  background: var(--tertiary);
-  border-radius: 12px;
-  margin-bottom: 20px;
-}
-
-.task-name {
-  margin: 0;
-  font-size: 1.8rem;
-}
-
-.task-type {
-  color: var(--secondary);
-  font-size: 1.55rem;
-}
-.task-actions {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  margin: 10px 0 5px 0;
-  justify-content: space-between;
-}
-
-.task-actions button,
-.task-actions select {
-  flex: 1;
-}
-
-.start-quiz {
-  
+.start{ 
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
-.start-quiz-btn {
+.start-btn {
   outline: none;
   border: none;
   display: inline-block;
@@ -183,68 +205,3 @@ footer h2 {
   box-shadow: 0 3px var(--grey);
 }
 
-.select-dropdown,
-.select-status {
-  display: block;
-  font-size: 2.2rem;
-  color: #444;
-  padding: 12px;
-  width: 100%;
-  max-width: 100%;
-  margin: 0;
-  border: 2px solid var(--grey);
-  border-radius: 12px;
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  appearance: none;
-  background-color: #fff;
-  background-image: url("../images/select-arrow.svg");
-  background-repeat: no-repeat, repeat;
-  background-position: right 0.7em top 50%, 0 0;
-  background-size: 0.65em auto, 100%;
-}
-
-.select-status {
-  font-size: 1.4rem;
-  padding: 4px 28px 4px 4px;
-  width: auto;
-}
-
-.select-dropdown::-ms-expand,
-.select-status::-ms-expand {
-  display: none;
-}
-
-.select-dropdown:hover,
-.select-status:hover {
-  border-color: #888;
-}
-
-.select-dropdown:focus,
-.select-status:focus {
-  border-color: #aaa;
-  box-shadow: 0 0 1px 3px rgba(59, 153, 252, 0.7);
-  box-shadow: 0 0 0 3px -moz-mac-focusring;
-  color: #222;
-  outline: none;
-}
-.select-dropdown option,
-.select-status option {
-  font-weight: normal;
-  font-size: 2rem;
-}
-
-@media screen and (max-width: 980px) {
-  form .form-group {
-    flex: 1 100%;
-  }
-
-  form .form-group button {
-    width: 100%;
-  }
-
-  .task-list-wrapper {
-    flex-basis: 100%;
-  }
-
-}
